src/objects/fflbx__CashProcessErrorLog__c.object
<CustomObject>
    <customHelpPage>fflbx__receipthelp</customHelpPage>
    <fields>
        <fullName>fflbx__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fflbx__ReceiptLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AR Cash Transaction Line Item</label>
        <referenceTo>fflbx__ReceiptLineItem__c</referenceTo>
        <relationshipLabel>Cash Entry/Matching Error Logs</relationshipLabel>
        <relationshipName>CashProcessErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fflbx__Receipt__c</fullName>
        <label>AR Cash Transaction</label>
        <referenceTo>fflbx__Receipt__c</referenceTo>
        <relationshipLabel>Cash Entry/Matching Error Logs</relationshipLabel>
        <relationshipName>CashProcessErrorLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Cash Entry/Matching Error Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cash Process Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entry/Matching Error Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>